--- a/Client/style.css
+++ b/Client/style.css
@@ -1,28 +1,49 @@
 * {
     box-sizing: border-box;
     height: auto;
-    margin: auto;
-    padding: auto;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    background-color: lightgrey;
-    
+    background-color: green;
 }
 
-.wrapper {
-    position: relative;
-    min-height: 100vh;
+#logBtnContainer {
+   background-color: black;
+   height: 200px;
 }
 
-.pageContainer {
-    padding-bottom: 5rem;
+.logBtns {
+    background-color: red;
+    height: 100px;
+    width: 100px;
 }
 
-.navigator {
-    height: 5rem;
-    position: absolute;
-    width: 100vw;
+#navContainer {
+    width: 100%;
+    height: 100px;
+    position: fixed;
     bottom: 0;
-    background-color: grey;
+    background-color: lightskyblue
+}
+
+#navList {
+    display: grid;
+    height: 100px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 5;
+    padding: 0;
+}
+
+.navItem {
+    width: 75px;
+    height: 75px;
+    background-color: white;
+    border-radius: 50%;
+    margin: auto;
+    text-align: center;
+    line-height: 75px;
+    text-decoration: none;
+    list-style-type: none;
 }
