--- a/Client/style.css
+++ b/Client/style.css
@@ -3,29 +3,38 @@
     height: auto;
     margin: 0;
     padding: 0;
+    font-family: 'PT Serif', serif;
 }
 
 body {
-    background-color: green;
+    background-color: #D6E6F2;
 }
 
+/*Account buttons styling*/
+
 #logBtnContainer {
-   background-color: black;
-   height: 200px;
+   background-color: white;
+   height: 100px;
+   width: 75px;
 }
 
 .logBtns {
-    background-color: red;
-    height: 100px;
-    width: 100px;
+    background-color: black;
+    color: white;
+    height: 20px;
+    width: 75px;
+    border: none;
+    border-radius: 5px;
 }
+
+/*Navigation styling*/
 
 #navContainer {
     width: 100%;
     height: 100px;
     position: fixed;
     bottom: 0;
-    background-color: lightskyblue
+    background-color: #303841;
 }
 
 #navList {
@@ -39,11 +48,52 @@ body {
 .navItem {
     width: 75px;
     height: 75px;
-    background-color: white;
+    background-color: #F5F5F5;
+    color: #2f3c4f;
     border-radius: 50%;
     margin: auto;
     text-align: center;
     line-height: 75px;
     text-decoration: none;
     list-style-type: none;
+    cursor: pointer;
+}
+
+/*User profile styling*/
+
+#profileContainer {
+    background-color: beige;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    text-align: center;
+}
+
+.profileInfo {
+    color: black;
+    font-size: 1.5rem;
+}
+
+
+/*Settings page styling*/
+
+#settingContainer {
+    width: 80%;
+    background-color: #303841;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    text-align: center;
+    margin: auto;
+}
+
+.settingSelectors {
+    width: 100px;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    background-color: #303841;
+    color: white;
+    margin: auto;
 }
