--- a/Client/style.css
+++ b/Client/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     font-family: 'PT Serif', serif;
+    overflow: hidden;
 }
 
 body {
@@ -155,25 +156,35 @@ body {
 
 #mainContentContainer {
     width: 100%;
-    display: grid;
-    grid-template-columns: 1;
-    grid-template-rows: 1fr 5fr;
+    height: 800px;
     margin: auto;
+    text-align: center;
 }
+
+#bodyPartSelector { 
+    height: 600px;
+    position: relative;
+}
+
+  #bodyButtonContainer {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: transparent
+  }
+
+  #leftPecBtn {
+    width: 40px;
+    height: 40px;
+    border: none;
+    background: none;
+  }
+
 
 #homeTitle {
     color: #303841;
-    font-size: 1.5rem;
-    margin: auto;
+    font-size: 2rem;
+    margin-top: 50px;
+    text-align: center;
 }
 
-#bodyPartSelector {
-    width: 90%;
-    margin: auto;
-}
-
-.chestBtns {
-    width: 100px;
-    height: 100px;
-    background-color: #303841;
-}
