--- a/Client/style.css
+++ b/Client/style.css
@@ -161,30 +161,101 @@ body {
     text-align: center;
 }
 
-#bodyPartSelector { 
-    height: 600px;
-    position: relative;
+#contentGrid {
+    display: grid;
+    grid-template-columns: 1;
+    grid-template-rows: 1 1 1;
+    width: 390px;
+    height: 700px;
+    margin: auto;
+    text-align: center;
 }
 
-  #bodyButtonContainer {
+#homeTitle {
+    color: #303841;
+    font-size: 2rem;
+    margin-top: 50px;
+}
+
+#bodyContainer {
     width: 100%;
-    height: 100%;
+    height: 500px;
+    margin: auto;
+}
+
+#bodyPartSelector { 
+    height: 500px;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+#bodyButtonContainer {
     position: absolute;
-    background: transparent
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 390px;
+    height: 500px;
+    margin-top: 120px;
+    margin-left: auto; 
+    margin-right: auto; 
   }
 
-  #leftPecBtn {
+.bodyBtns {
+    text-align: center;
+    position: absolute;
+  }
+
+#leftPecBtn {
+    left: 0;
+    right: 0;
+    margin: 100px 0 0 155px;
     width: 40px;
     height: 40px;
     border: none;
     background: none;
   }
 
+#rightPecBtn {
+    left: 0;
+    right: 0;
+    margin: 100px 0 0 196px;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background: none;
+    margin-right: 2px;
+  }
 
-#homeTitle {
-    color: #303841;
-    font-size: 2rem;
-    margin-top: 50px;
-    text-align: center;
-}
+#upperAbsBtn {
+    left: 0;
+    right: 0;
+    margin: 135px 0 0 175px;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background: none;
+  }
+  
+#lowerAbsBtn {
+    left: 0;
+    right: 0;
+    margin: 190px 0 0 175px;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background: none;
+  }
+
+#backBtn {
+    width: 125px;
+    height: 50px;
+    background-color: #303841;
+    color: #F5F5F5;
+    border: none;
+    border-radius: 5px;
+    margin: auto;
+  }
+
+
 
