--- a/Client/style.css
+++ b/Client/style.css
@@ -36,6 +36,7 @@ body {
     position: fixed;
     bottom: 0;
     background-color: #303841;
+    z-index: 999;
 }
 
 #navList {
@@ -204,6 +205,7 @@ body {
 .bodyBtns {
     text-align: center;
     position: absolute;
+    color: red;
   }
 
 #leftPecBtn {
@@ -227,6 +229,28 @@ body {
     margin-right: 2px;
   }
 
+#leftBicepBtn {
+    left: 0;
+    right: 0;
+    margin: 140px 0 0 80px;
+    width: 100px;
+    height: 20px;
+    border: none;
+    background: none;
+    transform: rotate(-70deg);
+  }
+
+#rightBicepBtn {
+    left: 0;
+    right: 0;
+    margin: 140px 0 0 210px;
+    width: 100px;
+    height: 20px;
+    border: none;
+    background: none;
+    transform: rotate(70deg);
+  }
+
 #upperAbsBtn {
     left: 0;
     right: 0;
@@ -247,6 +271,224 @@ body {
     background: none;
   }
 
+  #leftShinBtn {
+    left: 0;
+    right: 0;
+    margin: 400px 0 0 120px;
+    width: 100px;
+    height: 20px;
+    border: none;
+    background: none;
+    transform: rotate(-90deg);
+  }
+
+  #rightShinBtn {
+    left: 0;
+    right: 0;
+    margin: 400px 0 0 170px;
+    width: 100px;
+    height: 20px;
+    border: none;
+    background: none;
+    transform: rotate(90deg);
+  }
+
+#leftQuadBtn {
+    left: 0;
+    right: 0;
+    margin: 280px 0 0 120px;
+    width: 100px;
+    height: 40px;
+    border: none;
+    background: none;
+    transform: rotate(-90deg);
+  }
+
+  #rightQuadBtn {
+    left: 0;
+    right: 0;
+    margin: 280px 0 0 170px;
+    width: 100px;
+    height: 40px;
+    border: none;
+    background: none;
+    transform: rotate(90deg);
+
+  }
+
+.backBtns {
+    text-align: center;
+    position: absolute;
+    color: red;
+    display: none;
+  }
+
+  #leftTrapBtn {
+    left: 0;
+    right: 0;
+    margin: 95px 0 0 160px;
+    width: 50px;
+    height: 20px;
+    border: none;
+    font-size: 8px;
+    transform: rotate(80deg);
+    background: none;
+  }
+
+  #rightTrapBtn {
+    left: 0;
+    right: 0;
+    margin: 95px 0 0 180px;
+    width: 50px;
+    height: 20px;
+    border: none;
+    font-size: 8px;
+    transform: rotate(-80deg);
+    background: none;
+  }
+
+  #leftShoulderBtn {
+    left: 0;
+    right: 0;
+    margin: 92px 0 0 135px;
+    width: 30px;
+    height: 30px;
+    border: none;
+    font-size: 10px;
+    background: none;
+  }
+
+  #rightShoulderBtn {
+    left: 0;
+    right: 0;
+    margin: 92px 0 0 223px;
+    width: 30px;
+    height: 30px;
+    border: none;
+    font-size: 10px;
+    background: none;
+  }
+
+  #leftLatBtn {
+    left: 0;
+    right: 0;
+    margin: 135px 0 0 135px;
+    width: 70px;
+    height: 40px;
+    border: none;
+    background: none;
+    transform: rotate(80deg);
+  }
+
+  #rightLatBtn {
+    left: 0;
+    right: 0;
+    margin: 135px 0 0 182px;
+    width: 70px;
+    height: 40px;
+    border: none;
+    background: none;
+    transform: rotate(-80deg);
+  }
+
+  #lowerBackBtn {
+    left: 0;
+    right: 0;
+    margin: 190px 0 0 175px;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background: none;
+  }
+
+  #leftTricepBtn {
+    left: 0;
+    right: 0;
+    margin: 135px 0 0 115px;
+    font-size: 10px;
+    width: 30px;
+    height: 30px;
+    border: none;
+    background: none;
+    transform: rotate(-70deg);
+  }
+
+  #rightTricepBtn {
+    left: 0;
+    right: 0;
+    margin: 135px 0 0 242px;
+    font-size: 10px;
+    width: 30px;
+    height: 30px;
+    border: none;
+    background: none;
+    transform: rotate(70deg);
+  }
+
+#leftGluteBtn {
+    left: 0;
+    right: 0;
+    margin: 230px 0 0 152px;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background: none;
+  }
+
+  #rightGluteBtn {
+    left: 0;
+    right: 0;
+    margin: 230px 0 0 195px;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background: none;
+  }
+
+  #leftHamstringBtn {
+    left: 0;
+    right: 0;
+    margin: 285px 0 0 125px;
+    width: 80px;
+    height: 40px;
+    border: none;
+    background: none;
+    transform: rotate(-90deg);
+  }
+
+  #rightHamstringBtn {
+    left: 0;
+    right: 0;
+    margin: 285px 0 0 180px;
+    width: 80px;
+    height: 40px;
+    border: none;
+    background: none;
+    transform: rotate(90deg);
+  }
+
+  #leftCalfBtn {
+    left: 0;
+    right: 0;
+    margin: 400px 0 0 120px;
+    width: 100px;
+    height: 20px;
+    border: none;
+    background: none;
+    transform: rotate(-90deg);
+  }
+
+  #rightCalfBtn {
+    left: 0;
+    right: 0;
+    margin: 400px 0 0 170px;
+    width: 100px;
+    height: 20px;
+    border: none;
+    background: none;
+    transform: rotate(90deg);
+  }
+
 #backBtn {
     width: 125px;
     height: 50px;
@@ -257,5 +499,24 @@ body {
     margin: auto;
   }
 
+/*Video page styling*/
 
+#videoContainer {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
 
+#pageGrid {
+    display: grid;
+    grid-template-columns: 1;
+    grid-template-rows: 1fr 1fr;
+    height: 100%;
+    width: 390px;
+    margin: auto;
+}
+
+#videoFrame {
+    margin: 20px auto 20px auto;
+    z-index: 1;
+}
