--- a/Client/style.css
+++ b/Client/style.css
@@ -4,8 +4,8 @@
     margin: 0;
     padding: 0;
     font-family: 'PT Serif', serif;
-    overflow: hidden;
 }
+
 
 body {
     background-color: #D6E6F2;
@@ -42,8 +42,9 @@ body {
 #navList {
     display: grid;
     height: 100px;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 5;
+    margin: auto;
     padding: 0;
 }
 
@@ -64,24 +65,28 @@ body {
 /*User profile styling*/
 
 #profileContainer {
-    background-color: beige;
-    width: 100%;
+    background-color: #303841;
+
+    width: 300px;
+    margin: 100px auto 0px auto;
     display: grid;
+
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
-    text-align: center;
 }
 
 .profileInfo {
-    color: black;
-    font-size: 1.5rem;
+    padding: 20px;
+    width: 200px;
+    color: #F5F5F5;
+    font-size: 20px;
 }
 
 
 /*Settings page styling*/
 
 #settingContainer {
-    width: 80%;
+    width: 350px;
     height: 500px;
     background-color: #303841;
     display: grid;
@@ -134,7 +139,7 @@ body {
 }
 
 #settingsLogContainer {
-    width: 70%;
+    width: 300px;
     height: 80%;
     background-color: #F5F5F5;
     margin: auto;
@@ -206,6 +211,7 @@ body {
     text-align: center;
     position: absolute;
     color: red;
+    cursor: pointer;
   }
 
 #leftPecBtn {
@@ -321,6 +327,7 @@ body {
     position: absolute;
     color: red;
     display: none;
+    cursor: pointer;
   }
 
   #leftTrapBtn {
@@ -497,6 +504,7 @@ body {
     border: none;
     border-radius: 5px;
     margin: auto;
+    cursor: pointer;
   }
 
 /*Video page styling*/
@@ -510,13 +518,106 @@ body {
 #pageGrid {
     display: grid;
     grid-template-columns: 1;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 0.5fr 1fr 0.2fr 1fr 0.2f 1fr 0.2f 1fr 0.2f 1fr 0.2f;
     height: 100%;
     width: 390px;
     margin: auto;
+    overflow: hidden;
+    
+}
+
+#videoTitle {
+    font-size: 30px;
+    font-weight: bold;
+    margin: 50px auto 20px auto;
+}
+
+#pageGrid:last-child {
+  margin-bottom: 150px;
 }
 
 #videoFrame {
-    margin: 20px auto 20px auto;
+    margin: 20px auto 0px auto;
+    box-shadow: 0px 0px 10px black;
     z-index: 1;
+}
+
+#ytVideoTitle {
+  width: 390px;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 20px 0px 0px 0px;
+}
+
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
+}
+.loader::after {
+  content: "";
+  width: 75px;
+  height: 75px;
+  border: 15px solid #303841;
+  border-top-color: #D6E6F2;
+  border-radius: 50%;
+  animation: loading 1s ease infinite;
+}
+
+@keyframes loading {
+  to {
+    transform: rotate(1turn);
+  }
+}  
+
+
+#videoBox {
+  width: 390px;
+  height: 100%;
+}
+
+#likeBtn {
+  width: 85px;
+  height: 45px;
+  background-color: #303841;
+  color: #F5F5F5;
+  border: none;
+  border-radius: 5px;
+  margin: 20px auto;
+  cursor: pointer;
+}
+
+#likedVideosContainer {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+#likePageGrid {
+  display: grid;
+  grid-template-columns: 1;
+  grid-template-rows: 0.5fr 1fr 0.2fr 1fr 0.2f 1fr 0.2f 1fr 0.2f 1fr 0.2f;
+  height: 100%;
+  width: 390px;
+  margin: auto;
+  margin-bottom: 150px;
+  overflow: hidden;
+}
+
+#likedVideosHeader {
+  font-size: 30px;
+  font-weight: bold;
+  margin: 50px auto 20px auto;
+}
+
+#likedVideoTitle {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 20px 0px 20px 0px;
 }
