added all functional requierments

--- a/Client/style.css
+++ b/Client/style.css
@@ -7,8 +7,12 @@
 }
 
 
-body {
+body.lightTheme {
     background-color: #D6E6F2;
+}
+
+body.darkTheme {
+    background-color: #303841;
 }
 
 /*Account buttons styling*/
